<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="148dp"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:hint="@string/post_prompt"/>

                <ImageView
                    android:id="@+id/dpl_iv_post_image"
                    android:layout_width="match_parent"
                    android:layout_height="217dp"
                    android:layout_column="0"
                    android:layout_row="1"
                    app:srcCompat="@mipmap/ic_launcher" />

                <Spinner
                    android:id="@+id/spinner4"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_column="0"
                    android:layout_row="2"
                    android:entries="@array/post_category"
                    android:prompt="@string/post_category_prompt" />


            </GridLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="Tags: "
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.62"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text=""
                    android:hint="@string/tag_prompt"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/dpl_btn_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:text="Cancel" />

                <Button
                    android:id="@+id/dpl_btn_proclaim"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:text="Proclaim" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>